--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
       overflow-x: hidden;
     }
 
+    /* Light theme overrides (variables + base background) */
+    body[data-theme="light"] {
+      --bg: #f3f4f6;
+      --bg-soft: #ffffff;
+      --card: #ffffff;
+      --text-main: #111827;
+      --text-muted: #6b7280;
+      --border-subtle: rgba(209, 213, 219, 0.95);
+      --shadow-soft: 0 10px 25px rgba(148, 163, 184, 0.4);
+      background: radial-gradient(circle at 0% 0%, #e5e7eb 0, transparent 50%),
+                  radial-gradient(circle at 100% 0%, #e0f2fe 0, transparent 50%),
+                  #f9fafb;
+      color: var(--text-main);
+    }
+
     /* Animated gradient overlay */
     .bg-gradient-orbit {
       position: fixed;
@@ -80,6 +95,18 @@
       filter: blur(60px);
       animation: spin 28s linear infinite;
       z-index: -2;
+    }
+
+    body[data-theme="light"] .bg-gradient-orbit {
+      background: conic-gradient(
+        from 180deg,
+        rgba(79, 70, 229, 0.12),
+        rgba(14, 165, 233, 0.10),
+        rgba(56, 189, 248, 0.1),
+        rgba(79, 70, 229, 0.15)
+      );
+      opacity: 0.45;
+      filter: blur(70px);
     }
 
     @keyframes spin {
@@ -106,6 +133,13 @@
       padding: 0 26px 30px;
     }
 
+    body[data-theme="light"] .glass-shell {
+      background: radial-gradient(circle at top left, rgba(148, 163, 184, 0.16), transparent 55%),
+                  linear-gradient(145deg, #ffffff, #f9fafb);
+      border-color: rgba(209, 213, 219, 0.9);
+      box-shadow: var(--shadow-soft);
+    }
+
     /* NAVBAR */
     header {
       position: sticky;
@@ -127,6 +161,12 @@
       backdrop-filter: blur(20px);
     }
 
+    body[data-theme="light"] .nav {
+      background: linear-gradient(90deg, #ffffff, #f9fafb);
+      border-color: rgba(209, 213, 219, 1);
+      box-shadow: 0 10px 25px rgba(148, 163, 184, 0.45);
+    }
+
     .nav-left {
       display: flex;
       align-items: center;
@@ -144,6 +184,11 @@
       display: inline-flex;
       align-items: center;
       gap: 8px;
+    }
+
+    body[data-theme="light"] .name-chip {
+      background: #f9fafb;
+      border-color: rgba(209, 213, 219, 1);
     }
 
     .name-chip-dot {
@@ -174,6 +219,11 @@
       box-shadow: 0 0 0 1px rgba(148, 163, 184, 0.4);
     }
 
+    body[data-theme="light"] .nav-links a:hover {
+      background: #e5e7eb;
+      box-shadow: 0 0 0 1px rgba(209, 213, 219, 1);
+    }
+
     .nav-cta {
       display: flex;
       gap: 10px;
@@ -198,6 +248,12 @@
     .btn-outline {
       border-color: rgba(148, 163, 184, 0.55);
       background: linear-gradient(135deg, rgba(15, 23, 42, 0.85), rgba(15, 23, 42, 0.9));
+    }
+
+    body[data-theme="light"] .btn-outline {
+      background: #f9fafb;
+      border-color: rgba(209, 213, 219, 1);
+      color: var(--text-muted);
     }
 
     .btn-outline:hover {
@@ -236,6 +292,12 @@
       overflow: hidden;
     }
 
+    body[data-theme="light"] .hero {
+      background: radial-gradient(circle at top right, rgba(129, 140, 248, 0.15), transparent 50%),
+                  linear-gradient(135deg, #ffffff, #f9fafb);
+      border-color: rgba(209, 213, 219, 0.9);
+    }
+
     .hero::before {
       content: "";
       position: absolute;
@@ -267,6 +329,11 @@
       background: rgba(15, 23, 42, 0.9);
       backdrop-filter: blur(12px);
       color: var(--text-muted);
+    }
+
+    body[data-theme="light"] .hero-pill {
+      background: #f9fafb;
+      border-color: rgba(209, 213, 219, 1);
     }
 
     .hero-title {
@@ -305,6 +372,11 @@
       align-items: center;
       gap: 6px;
       color: var(--text-muted);
+    }
+
+    body[data-theme="light"] .tag {
+      background: #f9fafb;
+      border-color: rgba(209, 213, 219, 1);
     }
 
     .hero-actions {
@@ -351,6 +423,13 @@
       overflow: hidden;
     }
 
+    body[data-theme="light"] .orbit-card {
+      background: radial-gradient(circle at 0 0, rgba(129, 140, 248, 0.25), transparent 55%),
+                  linear-gradient(160deg, #ffffff, #f9fafb);
+      border-color: rgba(209, 213, 219, 1);
+      box-shadow: var(--shadow-soft);
+    }
+
     .orbit-header {
       display: flex;
       justify-content: space-between;
@@ -367,6 +446,11 @@
       display: inline-flex;
       align-items: center;
       gap: 6px;
+    }
+
+    body[data-theme="light"] .orbit-chip {
+      background: #f9fafb;
+      border-color: rgba(209, 213, 219, 1);
     }
 
     .orbit-avatar {
@@ -418,6 +502,11 @@
       color: var(--text-muted);
     }
 
+    body[data-theme="light"] .orbit-pill {
+      background: #f9fafb;
+      border-color: rgba(209, 213, 219, 1);
+    }
+
     .floating-badge {
       position: absolute;
       top: 12%;
@@ -432,6 +521,13 @@
       flex-direction: column;
       gap: 2px;
       min-width: 130px;
+      color: var(--text-main);
+    }
+
+    body[data-theme="light"] .floating-badge {
+      background: #f9fafb;
+      border-color: rgba(129, 140, 248, 0.9);
+      box-shadow: var(--shadow-soft);
     }
 
     .floating-badge span:first-child {
@@ -458,6 +554,12 @@
       display: inline-flex;
       align-items: center;
       gap: 6px;
+      color: var(--text-muted);
+    }
+
+    body[data-theme="light"] .floating-pill {
+      background: #f9fafb;
+      border-color: rgba(209, 213, 219, 1);
     }
 
     /* Sections */
@@ -479,6 +581,10 @@
       letter-spacing: 0.08em;
       text-transform: uppercase;
       color: #e5e7eb;
+    }
+
+    body[data-theme="light"] .section-title {
+      color: #111827;
     }
 
     .section-sub {
@@ -504,10 +610,16 @@
       overflow: hidden;
     }
 
+    body[data-theme="light"] .card {
+      background: radial-gradient(circle at 0 0, rgba(148, 163, 184, 0.20), transparent 55%),
+                  linear-gradient(145deg, #ffffff, #f9fafb);
+    }
+
     .card-title {
       font-size: 0.98rem;
       font-weight: 500;
       margin-bottom: 2px;
+      color: var(--text-main);
     }
 
     .card-meta {
@@ -532,6 +644,11 @@
       color: var(--text-muted);
     }
 
+    body[data-theme="light"] .card-tag {
+      background: #f9fafb;
+      border-color: rgba(209, 213, 219, 1);
+    }
+
     /* Skills */
     .skill-chips {
       display: flex;
@@ -549,6 +666,12 @@
       display: inline-flex;
       align-items: center;
       gap: 6px;
+      color: var(--text-muted);
+    }
+
+    body[data-theme="light"] .skill-chip {
+      background: #f9fafb;
+      border-color: rgba(209, 213, 219, 1);
     }
 
     .skill-chip i {
@@ -592,6 +715,7 @@
     .timeline-role {
       font-size: 0.93rem;
       font-weight: 500;
+      color: var(--text-main);
     }
 
     .timeline-org {
@@ -635,22 +759,6 @@
       text-decoration: underline;
     }
 
-    .mini-input-row {
-      display: grid;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-      gap: 10px;
-      margin-top: 8px;
-    }
-
-    .fake-input {
-      font-size: 0.8rem;
-      padding: 8px 10px;
-      border-radius: 0.9rem;
-      border: 1px dashed rgba(148, 163, 184, 0.55);
-      background: rgba(15, 23, 42, 0.95);
-      color: var(--text-muted);
-    }
-
     footer {
       margin-top: 22px;
       font-size: 0.78rem;
@@ -682,8 +790,12 @@
       white-space: nowrap;
     }
 
+    body[data-theme="light"] .typewriter {
+      color: #4f46e5;
+    }
+
     .typewriter span {
-      border-right: 2px solid #c4b5fd;
+      border-right: 2px solid currentColor;
       padding-right: 4px;
       animation: caret 0.85s steps(1) infinite;
     }
@@ -748,7 +860,7 @@
     }
   </style>
 </head>
-<body>
+<body data-theme="dark">
   <div class="bg-gradient-orbit" aria-hidden="true"></div>
   <div class="page-wrap">
     <header>
@@ -763,10 +875,16 @@
           <a href="#about">About</a>
           <a href="#experience">Experience</a>
           <a href="#skills">Skills</a>
-          <a href="#projects">Projects</a>
+          <a href="#projects">Project</a>
           <a href="#contact">Contact</a>
         </div>
         <div class="nav-cta">
+          <!-- Theme toggle button -->
+          <button class="btn btn-outline" id="theme-toggle" type="button">
+            <i class="fa-solid fa-moon"></i>
+            <span>Light mode</span>
+          </button>
+
           <button
             class="btn btn-outline"
             onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'})"
@@ -1166,43 +1284,42 @@
           </div>
         </section>
 
-<!-- CONTACT -->
-<section id="contact" class="reveal">
-  <div class="section-header">
-    <h2 class="section-title">Contact</h2>
-    <p class="section-sub">
-      Open to internships, projects, and roles in marketing, analytics,
-      and operations where a calm, logical problem-solver can add value.
-    </p>
-  </div>
+        <!-- CONTACT -->
+        <section id="contact" class="reveal">
+          <div class="section-header">
+            <h2 class="section-title">Contact</h2>
+            <p class="section-sub">
+              Open to internships, projects, and roles in marketing, analytics,
+              and operations where a calm, logical problem-solver can add value.
+            </p>
+          </div>
 
-  <div class="contact-grid">
-    <div class="card">
-      <h3 class="card-title">Let’s connect</h3>
-      <div class="contact-list">
-        <p>
-          <i class="fa-solid fa-envelope"></i>
-          &nbsp;
-          <a href="mailto:dhivaa007@gmail.com">dhivaa007@gmail.com</a>
-        </p>
-        <p>
-          <i class="fa-solid fa-phone"></i>
-          &nbsp;
-          <a href="tel:+919087035025">+91 90870 35025</a>
-        </p>
-        <p>
-          <i class="fa-solid fa-location-dot"></i>
-          &nbsp; Puducherry, India
-        </p>
-      </div>
-      <p style="font-size:0.85rem; color:var(--text-muted); margin-top:8px;">
-        You can reach out to discuss marketing projects, analytics work,
-        or any opportunity where structured thinking and coordination matter.
-      </p>
-    </div>
-  </div>
-</section>
-
+          <div class="contact-grid">
+            <div class="card">
+              <h3 class="card-title">Let’s connect</h3>
+              <div class="contact-list">
+                <p>
+                  <i class="fa-solid fa-envelope"></i>
+                  &nbsp;
+                  <a href="mailto:dhivaa007@gmail.com">dhivaa007@gmail.com</a>
+                </p>
+                <p>
+                  <i class="fa-solid fa-phone"></i>
+                  &nbsp;
+                  <a href="tel:+919087035025">+91 90870 35025</a>
+                </p>
+                <p>
+                  <i class="fa-solid fa-location-dot"></i>
+                  &nbsp; Puducherry, India
+                </p>
+              </div>
+              <p style="font-size:0.85rem; color:var(--text-muted); margin-top:8px;">
+                You can reach out to discuss marketing projects, analytics work,
+                or any opportunity where structured thinking and coordination matter.
+              </p>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer>
@@ -1280,6 +1397,36 @@
 
     // Current year in footer
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Theme handling
+    const themeToggleBtn = document.getElementById('theme-toggle');
+    const themeIcon = themeToggleBtn.querySelector('i');
+    const themeLabel = themeToggleBtn.querySelector('span');
+
+    function applyTheme(theme) {
+      document.body.setAttribute('data-theme', theme);
+      if (theme === 'light') {
+        themeIcon.classList.remove('fa-moon');
+        themeIcon.classList.add('fa-sun');
+        themeLabel.textContent = 'Dark mode';
+      } else {
+        themeIcon.classList.remove('fa-sun');
+        themeIcon.classList.add('fa-moon');
+        themeLabel.textContent = 'Light mode';
+      }
+    }
+
+    // Load saved theme or default to dark
+    const savedTheme = localStorage.getItem('theme') || 'dark';
+    applyTheme(savedTheme);
+
+    // Toggle on click
+    themeToggleBtn.addEventListener('click', () => {
+      const current = document.body.getAttribute('data-theme') || 'dark';
+      const next = current === 'dark' ? 'light' : 'dark';
+      localStorage.setItem('theme', next);
+      applyTheme(next);
+    });
   </script>
 </body>
 </html>
